--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/",
+  "homepage": "http://http://nameless.nomoredomains.club/",
   "devDependencies": {
     "gh-pages": "^4.0.0"
   }
