--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://nameless501.github.io/react-mesto-api-full/",
   "devDependencies": {
     "gh-pages": "^4.0.0"
   }
